# roam-public

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  memory:
bindings/dotnet/: README.md  Roam.DotNet.csproj
bindings/dotnet/src/: Agent.cs  NativeMethods.cs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
src/: access_policy.rs  approval.rs  audit_format.rs  control_plane.rs  execution_engine.rs  executor.rs  ffi.rs  generated.rs  grpc_executor.rs  handlers.rs  identity.rs  interceptor.rs  lib.rs  mapper.rs  memory.rs  mirror.rs  policy_engine.rs  prompt_hooks.rs  quota.rs  runtime_context.rs  schema_mode_policy.rs  session_policy.rs
src/grpc/: client.rs  mod.rs  server.rs
src/tcp/: auth.rs  client.rs  mod.rs  rate_limit.rs  server.rs
tests/: integration.rs  interceptor_tests.rs  unit.rs
tests/integration/: executor_tests.rs  grpc_executor_tests.rs  grpc_tests.rs  tcp_tests.rs
tests/unit/: audit_format_tests.rs  auth_tests.rs  control_plane_tests.rs  execution_engine_tests.rs  executor_tests.rs  grpc_agent_service_tests.rs  grpc_executor_tests.rs  interceptor_tests.rs  mapper_tests.rs  mirror_tests.rs  policy_engine_tests.rs  prompt_hook_tests.rs  rate_limit_tests.rs  runtime_context_tests.rs  seaorm_behavior_test.rs
