[package]
name = "oam"
version = "0.1.0"
edition = "2021"
description = "Object Agent Mapping framework for distributed systems and agents"
license = "MIT OR Apache-2.0"
authors = ["OAMRS Contributors"]
repository = "https://github.com/oamrs/roam"
keywords = ["agent", "mapping", "distributed", "framework"]
categories = ["development-tools"]

[dependencies]
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
serde_json = "1.0"
anyhow = "1.0"
regex = "1"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.6"
tokio = { version = "1", features = ["full"] }
