[package]
name = "oam"
version = "0.8.0"
edition = "2021"
description = "Object Agent Mapping framework for distributed systems and agents"
license = "MIT OR Apache-2.0"
authors = ["OAMRS Contributors"]
repository = "https://github.com/oamrs/roam"
readme = "README.md"
keywords = ["agent", "mapping", "distributed", "framework"]
categories = ["development-tools"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
schemars = { version = "0.8", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
regex = "1"
once_cell = "1.19"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "net", "time", "io-util", "signal"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
oam-schema = { version = "0.3.0", path = "../roam-schema" }
oam-proto = { version = "0.5.0", path = "../roam-proto" }
tonic = "0.11"
prost = "0.12"
tokio-stream = { version = "0.1", features = ["net"] }

[dev-dependencies]
tempfile = "3.6"
serial_test = "3"
tokio = { version = "1", features = ["full"] }
